# cpp_test

./: .gitignore  readme.md
CNN/: cnn.py  test.py
Freestanding_test/: .swp  Makefile  prog.c  yemu_v1.0.c  yemu_v1.0.out
NONEBOT/: readme.txt
NONEBOT/azazel_onebot/azazel_onebot_v1/: README.md  activate_venv.ps1  device.json  pyproject.toml
NONEBOT/azazel_onebot/azazel_onebot_v1/azazel_onebot_v1/plugins/: test.py
NONEBOT/azazel_onebot/azazel_onebot_v1/azazel_onebot_v1/plugins/ai_chat/: __init__.py  api_client.py  test_api.py
NONEBOT/azazel_onebot/azazel_onebot_v1/azazel_onebot_v1/plugins/draw/: __init__.py
NONEBOT/azazel_onebot/azazel_onebot_v1/azazel_onebot_v1/plugins/help/: __init__.py  help.txt
NONEBOT/azazel_onebot/azazel_onebot_v1/azazel_onebot_v1/plugins/weather/: __init__.py
NONEBOT/azazel_test2/: README.md  pyproject.toml
NONEBOT/azazel_test2/azazel_test2/plugins/weather/: __init__.py
NONEBOT/azazel_test_20250606/: README.md  pyproject.toml
Python/: plot.py
STM32/: test_bit_operator.c
cpp/: .note3.un~  .note4.un~  .readme.un~  readme  readme~
cpp_8gu/: 8gu.md  biary_tree_test.cpp  fuckvscode.cpp  new.cpp  test.cpp  test.md
cpp_test/: bank.cpp  ex1.cpp  ex10.c  ex11.c  ex12.c  ex17.c  ex18_bubble_sort.c  ex18_bubble_sort.cpp  ex5.c  integral.cpp  test.cpp
ex1/: .ex1.c.un~  .ex1.un~  ex1  ex1.c  ex1.c~
ex3/: .Makefile.un~  .ex13.c.un~  .ex16_app.c.un~  .ex17.c.un~  .ex8.c.un~  Makefile  Makefile~  ex11  ex12  ex12.c~  ex12~  ex13_add.c~  ex14.c  ex15.c~  ex16_app.c~  ex17  ex17.c  ex17.c~  ex3  ex3.c~  ex4.c~  ex5  ex8  ex8.c~  ex9
(+628 files in other folders)
