[project]
name = "azazel_test2"
version = "0.1.0"
description = "azazel_test2"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = []
plugin_dirs = ["azazel_test2/plugins"]
builtin_plugins = ["echo"]
