[project]
name = "azazel_onebot_v1"
version = "0.1.0"
description = "azazel_onebot_v1"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_boardgame"]
plugin_dirs = ["azazel_onebot_v1/plugins"]
builtin_plugins = ["echo", "single_session"]
